2007-09-30 (0.1.30)
- fixed for R 2.6.0+ and devel: CHAR_ELT() now returns const char*, removed
CR in src/Makevars.in

2007-07-11 (0.1.30)
- fix for changes in formals() in latest R-devel (cannot do formals() directly
on primitive functions like log(), has to do formals(args(log)) )
- fixed renameSdf documentation

2007-07-10 (0.1.27-0.1.29)
- created method _make_row_index(), similar to R that creates an index
vector, so that methods no longer have to consider the type of passed index
- added [<-.sqlite.vector, tests for that
- fix builds for windows, *bsd (mac)

2007-02-18 (0.1.26)
- updated to sqlite-3.3.13
- added R function sdfSelect, added tests for that
- fixes & enhancements on _get_factor_levels1, _get_vector_index_typed_result,
etc.

2006-10-03 (17:45 Manila, 0.1.25)
- fixed 0.1.24 warnings (errors in R/All.R)
- used sqlite context on aggregates. somehow, sizeof on struct with long
double worked. have to look out for that. 

2006-09-25 (18:50 Manila)
- inlined _expand_buf
- fixed sql buffer resizing in sdf_get_index
- added sdflm2

2006-09-20 (18:50 Manila)
- new sqlite.vector(vec), creates a 1-column sdf from a vector
- sqlite.matrix : dimnames, [, other experimental stuff
- sort.sqlite.vector sorts to a table to the sdf, no more creating a new
sdf
 
2006-09-06 (09:55 Manila)
- fixed linux configure script (add #include <unistd> in src/SQLite/tool/lemon.c)
- removed warnings, errors in configure.win (sh again, "uninitialized" vars)

2006-09-03 (15:34 Manila)
- moved default data dir to ./.SQLiteDF
- "generalized" sqlite vector, in that any table column can be used as an
sqlite.vector (previously, only columns of table sdf_data)
- fixed sqlite.matrix rownames

2006-08-28 (08:00 Manila)
- added sqlite.matrix and some of its methods
- fixed print.sqlite.data.frame bug
- added msg when an existing workspace.db is loaded

2006-08-27 (05:30 Manila)
- added sed script in configure.win to change chmod to ls

2006-08-24 (20:05 Manila)