@@ -1,12 +1,12 @@
 Package: SQLiteDF
 Type: Package
 Title: Stores data frames & matrices in SQLite tables
-Version: 0.1.31
+Version: 0.1.32
 Date: 2007-07-10
 Author: Miguel A. R. Manese
 Maintainer: Miguel A. R. Manese <jjonphl@gmail.com>
 Description: Transparently stores data frames & matrices into SQLite tables.
 Depends: R (>= 2.3.0), DBI (>= 0.1-10), utils 
 Suggests: biglm
-License: GPL2
+License: GPL-2
 Packaged: Sun Aug 27 19:04:17 2006; jon
