@@ -31,8 +31,12 @@ compareSdfToDf <- function(sdf, df, with.names=TRUE) {
     # test [.sqlite.data.frame for row.names()
     names <- row.names(df)
     for (i in 1:nrows) {
-        if (!isTRUE(all.equal(df[names[i]], sdf[names[i]])))
-            stop(paste("Not equal on ", names[i], " ([.sqlite.data.frame for row names)"))
+        x1 <- df[names[i],]
+        x2 <- sdf[names[i],]
+        for (j in 1:ncols) {
+            if (!isTRUE(all.equal(x1[1,j],x2[1,j])))
+                stop(paste("Not equal on ", names[i], ", ", j, " ([.sqlite.data.frame for row names)"))
+        }
     }
 
     # test [[.sqlite.data.frame (int arg), [.sqlite.vector, 
