@@ -1,3 +1,6 @@
+2008-06-22 (0.1.32)
+- added [.sqlite.data.frame for row.names
+
 2007-09-30 (0.1.30)
 - fixed for R 2.6.0+ and devel: CHAR_ELT() now returns const char*, removed
 CR in src/Makevars.in
